part2/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  labels:
    app: flask-redis
spec:
  type: NodePort
  selector:
    app: flask-redis
    type: flask
  ports:
  - port: 8080
    targetPort: 5000
    protocol: TCP
