part2/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  labels:
    app: flask-redis
spec:
  type: ClusterIP
  selector:
    app: flask-redis
    type: redis
  ports:
  - port: 6379
    targetPort: 6379
    protocol: TCP
