part2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tp
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - secretName: ingress-tls
      hosts:
        - tp.local
     
  rules:
  - host: tp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-service
            port:
              number: 8080
  - host: example.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-world
            port:
              number: 8081
